Default fenced codeblock should also have fixed scrollbar look #35

--- a/_sass/my-style.scss
+++ b/_sass/my-style.scss
@@ -109,7 +109,7 @@ div.highlight>.pre-header {
 
 // Fancy Codeblock Scrollbar
 
-pre.highlight {
+pre {
   border-color: transparent;
   transition: border-color 0.5s ease;
 
